<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.apsoftware.myapplication.viewmodels.DefinitionViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <!-- MarginTop uses magic number because single usage doesn't warrant adding to dimen -->
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_term_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/small_marg"
                android:layout_marginEnd="@dimen/small_marg"
                android:hint="@string/search_box_hint">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_term_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="lol">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Toggle for sorting by likes or dislikes -->
        <Button
                android:id="@+id/submit_button"
                android:layout_width="@dimen/wide_view_width"
                android:layout_height="@dimen/square_button_length"
                app:layout_constraintTop_toBottomOf="@id/search_term_layout"
                app:layout_constraintEnd_toStartOf="@id/sort_button"
                android:textSize="@dimen/small_text_size"
                android:text="@string/search"/>
        <ToggleButton
                android:id="@+id/sort_button"
                android:layout_width="@dimen/square_button_length"
                android:layout_height="@dimen/square_button_length"
                app:layout_constraintTop_toBottomOf="@id/search_term_layout"
                app:layout_constraintEnd_toEndOf="parent"
                android:textOff="@string/thumb_down"
                android:textOn="@string/thumb_up"
                tools:checked="false"/>

        <!-- List view for holding definitions -->
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/definition_recycler_view"
                android:layout_width="@dimen/default_constraint"
                android:layout_height="@dimen/default_constraint"
                android:layout_marginTop="@dimen/large_marg"
                app:layout_constraintTop_toBottomOf="@id/search_term_layout"
                android:layout_marginBottom="@dimen/large_marg"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/large_marg"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="@dimen/large_marg"
                app:layout_constraintEnd_toEndOf="parent"
                app:setAdapter="@{model.getDefinitionListAdapter()}"
                tools:itemCount="7"
                tools:listitem="@layout/definition_view"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>